@@ -78,7 +78,7 @@ public class ArcContainerImpl implements ArcContainer {
     private final Map<Class<? extends Annotation>, Set<Annotation>> transitiveInterceptorBindings;
     private final Map<String, Set<String>> qualifierNonbindingMembers;
 
-    private final Map<Class<? extends Annotation>, Collection<InjectableContext>> contexts;
+    private final Map<Class<? extends Annotation>, List<InjectableContext>> contexts;
     private final ManagedContext requestContext;
     private final InjectableContext applicationContext;
     private final InjectableContext singletonContext;
@@ -162,7 +162,7 @@ public class ArcContainerImpl implements ArcContainer {
     private void putContext(InjectableContext context) {
         Collection<InjectableContext> values = contexts.get(context.getScope());
         if (values == null) {
-            contexts.put(context.getScope(), Collections.singleton(context));
+            contexts.put(context.getScope(), Collections.singletonList(context));
         } else {
             List<InjectableContext> multi = new ArrayList<>(values.size() + 1);
             multi.addAll(values);
@@ -181,10 +181,9 @@ public class ArcContainerImpl implements ArcContainer {
     public void init() {
         requireRunning();
         // Fire an event with qualifier @Initialized(ApplicationScoped.class)
-        Set<Annotation> qualifiers = new HashSet<>(4);
-        qualifiers.add(Initialized.Literal.APPLICATION);
-        qualifiers.add(Any.Literal.INSTANCE);
-        EventImpl.createNotifier(Object.class, Object.class, qualifiers, this, false).notify(toString());
+        Set<Annotation> qualifiers = Set.of(Initialized.Literal.APPLICATION, Any.Literal.INSTANCE);
+        EventImpl.createNotifier(Object.class, Object.class, qualifiers, this, false)
+                .notify("@Initialized(ApplicationScoped.class)");
         // Configure CDIProvider used for CDI.current()
         CDI.setCDIProvider(new ArcCDIProvider());
         LOGGER.debugf("ArC DI container initialized [beans=%s, observers=%s]", beans.size(), observers.size());
@@ -216,7 +215,7 @@ public class ArcContainerImpl implements ArcContainer {
     }
 
     @Override
-    public Collection<InjectableContext> getContexts(Class<? extends Annotation> scopeType) {
+    public List<InjectableContext> getContexts(Class<? extends Annotation> scopeType) {
         requireRunning();
         return contexts.getOrDefault(scopeType, Collections.emptyList());
     }
@@ -314,7 +313,7 @@ public class ArcContainerImpl implements ArcContainer {
         Objects.requireNonNull(name);
         requireRunning();
         Set<InjectableBean<?>> resolvedBeans = beansByName.getValue(name);
-        return resolvedBeans.size() != 1 ? InstanceHandleImpl.unavailable()
+        return resolvedBeans.size() != 1 ? EagerInstanceHandle.unavailable()
                 : (InstanceHandle<T>) beanInstanceHandle(resolvedBeans.iterator()
                         .next(), null);
     }
@@ -344,7 +343,7 @@ public class ArcContainerImpl implements ArcContainer {
     public String toString() {
         return "ArcContainerImpl [id=" + id + ", running=" + running + ", beans=" + beans.size() + ", observers="
                 + observers.size() + ", scopes="
-                + getScopes() + "]";
+                + contexts.size() + "]";
     }
 
     public synchronized void shutdown() {
@@ -435,9 +434,8 @@ public class ArcContainerImpl implements ArcContainer {
             if (resetCurrentInjectionPoint) {
                 prev = InjectionPointProvider.set(CurrentInjectionPointProvider.EMPTY);
             }
-
             try {
-                return new InstanceHandleImpl<>(bean, bean.get(creationalContext), creationalContext, parentContext,
+                return new EagerInstanceHandle<>(bean, bean.get(creationalContext), creationalContext, parentContext,
                         destroyLogic);
             } finally {
                 if (resetCurrentInjectionPoint) {
@@ -445,7 +443,7 @@ public class ArcContainerImpl implements ArcContainer {
                 }
             }
         } else {
-            return InstanceHandleImpl.unavailable();
+            return EagerInstanceHandle.unavailable();
         }
     }
 
@@ -830,7 +828,7 @@ public class ArcContainerImpl implements ArcContainer {
 
     private static final class Resolvable {
 
-        private static final Set<Type> BUILT_IN_TYPES = new HashSet<>(Arrays.asList(Event.class, Instance.class));
+        private static final Set<Type> BUILT_IN_TYPES = Set.of(Event.class, Instance.class);
         private static final Annotation[] ANY_QUALIFIER = { Any.Literal.INSTANCE };
 
         final Type requiredType;
